--- a/source/backend.html.erb
+++ b/source/backend.html.erb
@@ -5,7 +5,7 @@ title: Backend technical task
 <p>The first API endpoint he will need is a "quotation" endpoint. This will take the pickup and drop-off location from the user and return a price estimate for the journey.</p>
 <p>Somchai realises that he can only service a small area of Bangkok, as he only has drivers in some suburbs. He takes out a map of Bangkok and draws a rectangle around the area he believes his riders can accept jobs from.</p>
 <p>
-  <img src="/images/map.png" id="delivery-map"/>
+  <img src="images/map.png" id="delivery-map"/>
 </p>
 <p>If the user tries to specify a pickup or drop-off location outside of this rectangle, Somchai's riders cannot service it, so the API will return an error state.</p>
 <p>As an experienced former motorbike taxi himself, Somchai knows the fare charged will depend on the distance. He decides for simplicity he'll just use the straightline distance between the pickup and drop-off location, and calculate the price based on a set per-kilometre fee.</p>
@@ -31,4 +31,4 @@ For the purpose of this exercise, you should build the "quotation" endpoint. You
   "cost": 80.0
 }</pre>
 
-<a href="/" class="button">&lt; Back</a>
+<a href="index.html" class="button">&lt; Back</a>
