--- a/source/frontend.html.erb
+++ b/source/frontend.html.erb
@@ -3,4 +3,4 @@ title: Frontend technical task
 ---
 TBA
 
-<a href="/" class="button">&lt; Back</a>
+<a href="index.html" class="button">&lt; Back</a>
