--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Foodkit" %></title>
-    <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
+    <link href="stylesheets/site.css" rel="stylesheet">
+    <script src="javascripts/site.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!-- favicons -->
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://foodkit.io/images/favicons/apple-touch-icon-57x57-fb316047.png" />
@@ -35,7 +35,7 @@
   <body>
     <div class="container">
       <header>
-        <img src="/images/logo-small.png" alt="Foodkit logo" />
+        <img src="images/logo-small.png" alt="Foodkit logo" />
         <h2></h2>
       </header>
       <section>
