--- a/source/backend.html.erb
+++ b/source/backend.html.erb
@@ -13,22 +13,24 @@ title: Backend technical task
 For the purpose of this exercise, you should build the "quotation" endpoint. Your API will need to be configurable with the following settings:
 <ul>
 <li>Delivery boundary (2 &times; latitude,longitude pairs, which are the top-left and bottom-right points demarking the serviceable area rectangle)</li>
+<li>Flag fall (the base fare)</li>
 <li>Per kilometer cost</li>
 </ul>
 </p>
 <p>The quotation endpoint should accept a payload of the format:</p>
 <pre>POST api/quotation
 {
-  "from": {"lat": 0.0, "lng": 0.0},
-  "to": {"lat": 0.0, "lng": 0.0}
+  "from": {"lat": 13.735161, "lng": 100.582225},
+  "to": {"lat": 13.726939, "lng": 100.575302}
 }</pre>
 <p>If either the "from" or "to" location are outside of the service area, the API should return an error state with some message explaining the failure. If the "from" and "to" location are both within the service area, the API should respond as follows:</p>
 <pre>200 OK
 {
-  "from": {"lat": 0.0, "lng": 0.0},
-  "to": {"lat": 0.0, "lng": 0.0},
+  "from": {"lat": 13.735161, "lng": 100.582225},
+  "to": {"lat": 13.726939, "lng": 100.575302}
   "distance": 1.2,
-  "cost": 80.0
+  "cost": 66.8
 }</pre>
+<p>In the example above, the "flag fall" is set to <strong>50 THB</strong> and the per kilometre cost is <strong>14</strong>, so <pre>50 + (14 * 1.2) = 66.8</pre>. Note that the cost should be rounded to a single decimal point of accuracy.</p>
 
 <a href="index.html" class="button">&lt; Back</a>
