--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -79,6 +79,10 @@ footer {
   display: block;
   margin: 0 auto 0 auto;
 }
+#modal-example {
+  margin: 0 auto 0 auto;
+  display: block;
+}
 
 .buttons {
   display: flex;
