Update styles for frontend/backend tasks

--- a/source/frontend.html.erb
+++ b/source/frontend.html.erb
@@ -3,7 +3,7 @@ title: Frontend technical task
 ---
 
 <p>For this task we're going to help our friend Somchai who owns a cafe. He wants us to build an ecommerce enabled website for his business so his customers can quickly and easily order coffee online from a range of different devices (mobile phones, tablets and desktop/laptop computers).</p>
-<p>So that we can provide a responsive and performant user experience, we decide to build it as a <strong>progressive single page web app</strong> using our favourite frontend framework (Angular, React or VueJS).</p>
+<p>So that we can provide a responsive and performant user experience, we decide to build it as a <strong>single page web app</strong> using our favourite frontend framework (Angular, React or VueJS).</p>
 <p>One of the first things we need to do is build a page so that customers can view the information about different menu items. For this technical task, we will be building the <strong>product detail modal</strong>. This is a modal window that will appear when the customer clicks on a product they're interested in purchasing. After a couple of hours in Sketch, we come up with the following mockup for the page:</p>
 <p>
   <img src="images/modal-example-338x668.png" id="modal-example"/>
